--- a/force-app/main/default/classes/Utils.cls
+++ b/force-app/main/default/classes/Utils.cls
@@ -1,5 +1,5 @@
 public with sharing class Utils {
-    public Utils() {
-
+    public static number utilMethod(number a, number b, number c){
+        return a + b + c;
     }
 }
